created index view

--- a/Views/TimeTrack/Index.cshtml
+++ b/Views/TimeTrack/Index.cshtml
@@ -1,7 +1,47 @@
+@model IEnumerable<TimeTrack.Models.Client>
+
 @{
     ViewData["Title"] = "Stuff";
 }
 
 <h2>Index</h2>
 
-<p>Hello from our View Template!</p>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Client Name
+            </th>
+            <th>
+                Start Date
+            </th>
+            <th>
+                Location
+            </th>
+            <th>Edit | Detail | Delete</th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StartDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Location)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
