--- a/Views/TimeTrack/details.cshtml
+++ b/Views/TimeTrack/details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.ClientName)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StartDate)
@@ -22,6 +22,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.ClientId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
