updated table headers

--- a/Views/TimeEntry/Index.cshtml
+++ b/Views/TimeEntry/Index.cshtml
@@ -13,13 +13,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Time)
+                Time Spent
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.WorkDate)
+                Date Worked
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Project)
+                Project ID
             </th>
             <th></th>
         </tr>
