accidently deleted the clients views... added them back and added IDs to the index views

--- a/Views/Project/Index.cshtml
+++ b/Views/Project/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                Project ID
+            </th>
+            <th>
                 Project Name
             </th>
             <th>
@@ -30,6 +33,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProjectId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProjectName)
             </td>
