--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,10 +26,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="TimeTrack" asp-action="Index" class="navbar-brand">TimeTrack</a>
+                <a asp-area="" asp-controller="TimeTrack" asp-action="Report" class="navbar-brand">Report</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="TimeTrack" asp-action="Index">Clients</a></li>
                     <li><a asp-area="" asp-controller="Project" asp-action="Index">Projects</a></li>
                     <li><a asp-area="" asp-controller="TimeEntry" asp-action="Index">Time Entry</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
